[gd_scene load_steps=7 format=3 uid="uid://wchjm8vhj3g4"]

[ext_resource type="Script" path="res://scenes/post_game_screen.gd" id="1_e8m75"]
[ext_resource type="Texture2D" uid="uid://fbo8lgy8lskj" path="res://assets/menu_background.jpg" id="3_rs1kk"]
[ext_resource type="Texture2D" uid="uid://basuwebw25ykd" path="res://assets/main_menu_ballon.png" id="4_f8soy"]
[ext_resource type="AudioStream" uid="uid://dw4p4ssjgnhb3" path="res://assets/Dark sneaky ambient.mp3" id="5_0jmc1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6vong"]

[sub_resource type="Theme" id="Theme_5c22r"]

[node name="PostGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8m75")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(580, 329)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0jmc1")
autoplay = true

[node name="SpriteBG" type="Sprite2D" parent="."]
position = Vector2(580, 327.5)
scale = Vector2(2.57333, 2.22867)
texture = ExtResource("3_rs1kk")

[node name="GameResultBG" type="ColorRect" parent="."]
material = SubResource("CanvasItemMaterial_6vong")
layout_mode = 0
offset_left = 303.0
offset_top = 153.0
offset_right = 846.0
offset_bottom = 489.0
color = Color(0.121569, 0.0901961, 0.184314, 1)
metadata/_edit_group_ = true

[node name="GameResultLabel" type="Label" parent="GameResultBG"]
layout_mode = 0
offset_left = 1.0
offset_top = 44.0
offset_right = 544.0
offset_bottom = 99.0
text = "LEVEL X COMPLETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextActionInfoLabel" type="Label" parent="GameResultBG"]
layout_mode = 0
offset_left = 3.0
offset_top = 107.0
offset_right = 546.0
offset_bottom = 162.0
text = "CHOOSE YOUR PUNISHMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceButtonFaster" type="Button" parent="GameResultBG"]
layout_mode = 0
offset_left = 23.0
offset_top = 182.0
offset_right = 239.0
offset_bottom = 288.0
text = "FASTER ENEMIES"

[node name="ChoiceButtonFlashlight" type="Button" parent="GameResultBG"]
layout_mode = 0
offset_left = 301.0
offset_top = 179.0
offset_right = 517.0
offset_bottom = 289.0
theme = SubResource("Theme_5c22r")
text = "BIGGER FLASHLIGHTS"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = -1.0
offset_right = 122.0
offset_bottom = 30.0
text = "Quit To Menu"

[node name="SpriteBaloonL" type="Sprite2D" parent="."]
position = Vector2(293, 334)
scale = Vector2(4.0679, 4.42553)
texture = ExtResource("4_f8soy")

[node name="SpriteBaloonL2" type="Sprite2D" parent="."]
position = Vector2(836, 333)
scale = Vector2(4.0679, 4.42553)
texture = ExtResource("4_f8soy")
